# daccord

./: .gitignore  AUTHORS  ChangeLog  Makefile.in  README.md  bumpversion.sh  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: ActiveElement.hpp  ChainSet.hpp  ComputeOffsetLikely.hpp  DebruijnGraph.hpp  DebruijnGraphBase.hpp  DebruijnGraphContainer.hpp  DebruijnGraphInterface.hpp  DecodedReadContainer.hpp  DotProduct.hpp  HandleContext.hpp  HetThreshold.hpp  Links.hpp  Makefile.am  Makefile.in  Node.hpp  OffsetLikely.hpp  Repeat.hpp  RepeatIdComparator.hpp  TraceType.hpp  bamfilterlongest.cpp  bamidrename.cpp  canutolas.cpp  checkconsensus.cpp  checklas.cpp  computeextrinsicqv.cpp  computeintrinsicqv.cpp  computeintrinsicqv2.cpp  daccord.cpp  encodegraph.cpp  fillfasta.cpp  filterchains.cpp  filtersym.cpp  generateperfectpiles.cpp  lasdetectsimplerepeats.cpp  lasfilteralignments.cpp  lasfilteralignmentsborderrepeats.cpp  maftobam.cpp  mapconstoraw.cpp  marktrue.cpp  rlastobam.cpp  (+6 more)
